tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__AModernTechnolog-VFVruPLHQAeDthuV-s7HGQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17494021680560785177,
  "prerequisites": [
    731
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Concrete. Eh sorry, Hempcrete! A new modern technology brought to you via the GTNH Chisel mod. All 16 colors.\n\nThere are a lot of other nice blocks in Chisel. Just type \"@chisel\" in NEI and look around.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Modern Technology",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    731
  ],
  "rewards": [],
  "tasks": []
}
