tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__BaseTooBigIveGot-AAAAAAAAAAAAAAAAAAADuA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 952,
  "prerequisites": [
    1155,
    554,
    539
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Keeping a base spread apart for pollution or explosion prevention can really wear you out, so why not make some concrete to get around faster?\n\nHarvest some Marble and centrifuge it into Calcite, and mix up some concrete in your Mixer. Next output it into a Fluid Solidifier with a block mold to make concrete blocks.\n\nYou'll move faster on top of these blocks. They can even be turned into bricks to prevent unwanted spawns! Hint: 10 buckets of wet mix converts to exactly 160 blocks. These blocks can also be Chiseled into different varieties.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Base Too Big? I've Got a Fix For You!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1155,
    554,
    539
  ],
  "rewards": [],
  "tasks": []
}
