tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__BasicProjectRedI-AAAAAAAAAAAAAAAAAAAHtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1973,
  "prerequisites": [
    554
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The basic ProjectRed Illumination lamps only need an LV mixer to make. The normal version needs a redstone signal to turn on. The inverted version is on unless a redstone signal is applied.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Basic ProjectRed Illumination",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    554
  ],
  "rewards": [],
  "tasks": []
}
