tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__BetterIO-AAAAAAAAAAAAAAAAAAAHvQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1981,
  "prerequisites": [
    81
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Powered and Wireless Powered lights from EnderIO provide light up to 10 blocks away vs the normal 7 for a torch. They will require centrifuging liquid air to get the bulbs.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "BetterIO?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    81
  ],
  "rewards": [],
  "tasks": []
}
