tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__Botany-AAAAAAAAAAAAAAAAAAAHoA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1952,
  "prerequisites": [
    492
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Botany mod offers more colors for blocks and glass, and simple tile patterns or more complex patterns using a Tileworker. For now, we'll make an iron trowel.\n\nThis mod will make lots of butterflies, so make sure to do your gardening underground or under glass. The butterflies will spread and infect leaves around your area, making more butterflies, causing lag.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Botany",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    492
  ],
  "rewards": [],
  "tasks": []
}
