tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__BuildingMadeEasy-AAAAAAAAAAAAAAAAAAACWQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 601,
  "prerequisites": [
    44
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Placing blocks by hand can be tedious. Wouldn't it be nice to be able to place blocks like \"Another 9 here\"? Well, good news. Get yourself some of the various building blocks, and I shall reward you with something nice.\n\nYou could also just craft it (or the better one) with unstable ingots yourself, too.\n\nYou can upgrade to the various other BBWs too.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Building Made Easy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    44
  ],
  "rewards": [],
  "tasks": []
}
