tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__CarpentersBlocks-AAAAAAAAAAAAAAAAAAAIcA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2160,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Yet another custom block system! Carpenter's blocks are crafted blank and placed in-world, and then plain block textures applied to them. The blocks must not be Tile Entities, so Botany blocks don't work correctly with them, but GT Stones like Red Granite, and any colored clay or vanilla glass block will work. Some Chisel glass types will work, and Ztones blocks and Tinted Glass also work.\n\nThe Garage Door requires a block at the top to hang \"down\" from, but can pretty much be any length. A redstone signal on any block next to the Garage Door blocks will open or close the door. The open/close will propagate across multiple vertical doors, so you can set up non-square doors. Sneaking and right-clicking with an empty hand will change the door's polarity.\n\nThe pressure plates are player-only activation, making them great for doors into your base.\n\nThe hatches must be clicked on the side of a block to place. They can be handy for protecting you from crucible...byproducts.\n\nThere is a lot more block shapes possible, check NEI for \"Carpenter's\" to see the options.\n\nThe Chisel allows you to chisel blocks while attached to a Carpenter's block.\n\nThe Hammer allows various functions.\n\nHammer on door - changes door shape type\nSneak Hammer on door - Changes from iron to wooden behavior\nSneak Hammer on lever - Changes polarity (which direction is on/off)",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Carpenter's Blocks",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
